JIRA - 0123568 Added SCSS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "maindiv",
         "nameofsender",
         "rahman",
+        "reactsvg",
         "sendername",
         "testid",
         "xcbcnv",
