--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "extramedium",
         "extrasmall",
         "fghh",
+        "leftlist",
         "listitem",
         "listitems",
         "maindiv",
