--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,9 @@
         "rahman",
         "reactsvg",
         "sendername",
+        "setstate",
         "testid",
+        "unmounting",
         "verylarge",
         "verysmall",
         "xcbcnv",
